--- a/src/signals_notebook/templates/experiment.html
+++ b/src/signals_notebook/templates/experiment.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;200;300;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"/>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
-    <title>{% block title %}{{ title }}{% endblock %}</title>
+    <title>{% block title %}{{ data['title'] }}{% endblock %}</title>
     <style>
         h1 {
             margin-top: 1.7rem;
@@ -44,25 +40,29 @@
 <table class="props">
     <tr>
         <th>Experiment name:</th>
-        <td>{{ title|e }}</td>
+        <td>{{ data['title']|e }}</td>
     </tr>
     <tr>
         <th>Description:</th>
-        <td>{{ description|e }}</td>
+        <td>{{ data['description']|e }}</td>
     </tr>
     <tr>
+
         <th>Last edited at:</th>
-        <td>{{ edited_at|human_readable }}</td>
+
+        <td>{{ data['edited_at'].strftime('%H:%M:%S %Y-%m-%d') }}</td>
+
     </tr>
     <tr>
         <th>State:</th>
-        <td>{{ state }}</td>
+        <td>{{ data['state']|e }}</td>
     </tr>
 </table>
 
 {% for item in data['children'] %}
-    {{ item | safe }}
+    {{ item.get_html() | safe }}
 {% endfor %}
+
 
 </body>
 </html>
