PSFSN-15: added right order for entities store

--- a/src/signals_notebook/templates/entity.html
+++ b/src/signals_notebook/templates/entity.html
@@ -9,4 +9,16 @@
         </tr>
         </tbody>
     </table>
+    <table border="1">
+        <tbody>
+        <tr>
+            {% if data['edited_at'] %}
+            <td>{{ 'Modified: ' + data['edited_at'].strftime('%H:%M %d.%m.%Y') }}</td>
+            {% endif %}
+            {% if data['description'] %}
+            <td>{{ 'Description: '+ data['description'] }}</td>
+            {% endif %}
+        </tr>
+        </tbody>
+    </table>
 </div>
