PSFSN-15: fixed mypy error

--- a/src/signals_notebook/templates/experiment.html
+++ b/src/signals_notebook/templates/experiment.html
@@ -52,7 +52,7 @@
     </tr>
     <tr>
         <th>State:</th>
-        <td>{{ data['state']|e }}</td>
+        <td>{{ data['state'].value |e }}</td>
     </tr>
 </table>
 
