PSFSN-15: added get_html for table/ written get methods for row and table entities

--- a/src/signals_notebook/templates/table.html
+++ b/src/signals_notebook/templates/table.html
@@ -12,7 +12,7 @@
         <tbody>
         {% for row in rows %}
         <tr>
-            {% for value in row %}
+            {% for value in row.values() %}
             <td>{{ value | safe }}</td>
             {% endfor %}
         </tr>
