--- a/src/signals_notebook/templates/chemical_drawing.html
+++ b/src/signals_notebook/templates/chemical_drawing.html
@@ -1,8 +1,12 @@
-<div>
-    <h1>{{ data['name'] }}</h1>
+<div style="margin: 10px 10px; padding: 6px 10px; border: solid 1px #f5f5f5;">
+    <h2>{{ data['name'] }}</h2>
 
     {% if data['svg'] %}
-        <p><img src="{{ data['svg'] }}" alt="Reaction preview" style="width:100%;"/></p>
+    <div class="parent">
+        <div class="image-container">
+            <img src="{{ data['svg'] }}" alt="Reaction preview" style="width:100%"/>
+        </div>
+    </div>
     {% endif %}
 
     {{ data['stoichiometry_html'] | safe }}
