--- a/src/signals_notebook/templates/image.html
+++ b/src/signals_notebook/templates/image.html
@@ -1,6 +1,10 @@
-<div>
-    <h1>{{ data['name'] }}</h1>
+<div style="margin: 10px 10px; padding: 6px 10px; border: solid 1px #f5f5f5;">
+    <h2>{{ data['name'] }}</h2>
     {% if data['image'] %}
-        <p><img src="{{ data['image'] }}" alt="Image preview" style="width:100%;"/></p>
+    <div class="parent">
+        <div class="image-container">
+            <img src="{{ data['image'] }}" alt="Image preview" style="width:100%;"/>
+        </div>
+    </div>
     {% endif %}
 </div>
