--- a/src/signals_notebook/templates/text.html
+++ b/src/signals_notebook/templates/text.html
@@ -1,10 +1,6 @@
-<div>
+<div style="margin: 10px 10px; padding: 6px 10px; border: solid 1px #f5f5f5;">
     <h2>{{ data['name'] }}</h2>
-    <table border="1">
-        <tbody>
-            <tr>
-                <td>{{ data['content'] | safe }}</td>
-            </tr>
-        </tbody>
-    </table>
+    <div>
+        <span>{{ data['content'] | safe }}</span>
+    </div>
 </div>
