--- a/src/signals_notebook/templates/word.html
+++ b/src/signals_notebook/templates/word.html
@@ -1,6 +1,10 @@
 <div style="margin: 10px 10px; padding: 6px 10px; border: solid 1px #f5f5f5;">
     <h2>{{ data['name'] }}</h2>
     {% if data['content'] %}
-    <a href="{{ data['content'] }}" download="file.docx">DOWNLOAD .DOCX FILE</a>
+    {% if data['name'].endswith('.docx') %}
+    <a href="{{ data['content'] }}" download="{{ data['name'] }}">DOWNLOAD .DOCX FILE</a>
+    {% else %}
+    <a href="{{ data['content'] }}" download="{{ data['name'] }}.docx">DOWNLOAD .DOCX FILE</a>
+    {% endif %}
     {% endif %}
 </div>
