PSFSN-20 Changing Template Refactoring: created Middleware for finding templates in different dirs

--- a/src/signals_notebook/templates/experiment.html
+++ b/src/signals_notebook/templates/experiment.html
@@ -16,7 +16,7 @@
             margin-top: 1.2rem;
             margin-bottom: 0.3rem;
             font-size: 1.2rem;
-            color: #00A0E1 !important;
+            color: #00A0E1;
         }
 
         table.props th, table.props td {
