SBT-73 Custom System Object templates + investigate ability to dump them: added create method

--- a/src/signals_notebook/templates/ado.html
+++ b/src/signals_notebook/templates/ado.html
@@ -80,7 +80,10 @@
 </table>
 
 {% for item in data['children'] %}
-{{ item.get_html() | safe }}
+    {% set child_html = item.get_html() -%}
+    {% if child_html is not none %}
+        {{ child_html | safe }}
+    {% endif %}
 {% endfor %}
 
 
